--- a/mygcs2/src/main/res/layout/recyclerview_item.xml
+++ b/mygcs2/src/main/res/layout/recyclerview_item.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/text1"
-        android:textSize="32sp"/>
+        android:background="@drawable/recyclerview_back"
+        android:textColor="#000000"
+        android:padding="2dp"
+        android:textSize="16sp"/>
 
 </android.support.constraint.ConstraintLayout>
